--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@discordjs/voice": "^0.18.0",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.7",
+    "opusscript": "^0.0.8",
+    "play-dl": "^1.9.7",
+    "prism-media": "^1.3.5",
     "ytdl-core": "^4.11.5"
   }
 }
